--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
@@ -65,6 +65,22 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\BedrijfDetailAddView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\BedrijfDetailEditView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\BedrijfDetailViewView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\BedrijvenListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -74,8 +90,23 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Models\BedrijfswagenBeheerRepository.cs" />
+    <Compile Include="ViewModels\BedrijfDetailAddViewModel.cs" />
+    <Compile Include="ViewModels\BedrijfDetailEditViewModel.cs" />
+    <Compile Include="ViewModels\BedrijfDetailViewViewModel.cs" />
     <Compile Include="ViewModels\BedrijvenListViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="Views\BedrijfDetailAddView.xaml.cs">
+      <DependentUpon>BedrijfDetailAddView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\BedrijfDetailEditView.xaml.cs">
+      <DependentUpon>BedrijfDetailEditView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\BedrijfDetailViewView.xaml.cs">
+      <DependentUpon>BedrijfDetailViewView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\BedrijvenListView.xaml.cs">
+      <DependentUpon>BedrijvenListView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
