--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
@@ -37,6 +37,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>sedan.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
@@ -173,9 +176,14 @@
       <Name>EB.BedrijfswagenBeheer.Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\sedan.ico" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\OdiseeSmall.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="sedan.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
