Wagen klasse aangepast zodat je wagens kan aanmaken zonder bestuurder

--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
@@ -185,6 +185,9 @@
   <ItemGroup>
     <Resource Include="sedan.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\company.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
