Fix volgorde wanneer wagen wordt toegevoegd; Bestuurder was gekoppeld aan Type Wagen

--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
@@ -196,6 +196,9 @@
   <ItemGroup>
     <Resource Include="Images\company.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\work.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
