--- a/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
+++ b/EB.BedrijfswagenBeheer/EB.BedrijfswagenBeheer.App/EB.BedrijfswagenBeheer.App.csproj
@@ -38,7 +38,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>sedan.ico</ApplicationIcon>
+    <ApplicationIcon>bedrijfswagenbeheerIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -165,6 +165,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Files\BedrijfswagenBeheerHelp.pdf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -198,6 +199,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\work.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\vraagteken.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\exit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\export.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\information.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\bedrijfswagenbeheerIcon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="bedrijfswagenbeheerIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
